# stringdb-link

./: .dockerignore  .env.docker.example  .env.example  .env.npm.example  .flake8  .gitignore  .loc-allowlist  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  SECURITY.md  container-release.json  mcp_server.py  pyproject.toml  server.py
.claude/skills/fastapi-route-change/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.github/workflows/: conformance.yml  container-ci.yml  container-security.yml
docker/: .dockerignore  Dockerfile  README.md  __init__.py  docker-compose.dev.yml  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py
docs/: architecture.md  configuration.md  data.md  deployment.md  rest-api.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-05-25-modernize-python-stack-and-agent-workflow.md
docs/superpowers/specs/: 2026-05-25-modernize-python-stack-and-agent-workflow-design.md
scripts/: check_file_size.py
stringdb_link/: __init__.py  app.py  cli.py  config.py  config_models.py  config_new.py  exceptions.py  logging_config.py  server_manager.py
stringdb_link/api/: __init__.py  client.py  http_errors.py  url_guard.py
stringdb_link/api/routes/: __init__.py  annotations.py  dependencies.py  enrichment.py  health.py  homology.py  identifiers.py  images.py  networks.py
stringdb_link/mcp/: __init__.py  annotations.py  envelope.py  error_passthrough.py  notfound_guard.py  untrusted_content.py
stringdb_link/models/: __init__.py  coercions.py  requests.py  responses.py  stringdb.py
stringdb_link/services/: __init__.py  stringdb_service.py
stringdb_link/utils/: __init__.py  caching.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_api_routes_error_handling.py  test_cli.py  test_server_manager.py
tests/api/: test_enrichment_network_regression.py  test_health.py  test_homology.py  test_identifiers.py
tests/conformance/: conftest.py  test_construction_guard.py  test_contract_truth_v1.py
tests/unit/: conftest.py  test_caching.py  test_client_error_body.py  test_config.py  test_config_docs_contract.py  test_contract_rework_v1.py  test_cors_credentials.py  test_docker_compose_loopback.py  test_dockerfile_bootstrap.py  test_exceptions_comprehensive.py  test_homology_mapping.py  test_host_origin_guard.py  test_logging_config.py  test_logging_redaction.py  test_models.py  test_models_comprehensive.py  test_rate_limiter.py  test_readme_tools.py  test_redirect_response_cap.py  test_request_models_coverage.py  test_response_envelope_v1.py  test_responses_string_coercion.py  test_simple_exceptions.py  test_stringdb_service.py  test_stringdb_service_basic.py  test_tool_names.py  test_version_single_source.py
tests/unit/mcp/: test_error_leak_fencing.py  test_error_sanitation.py  test_notfound_guard.py  test_untrusted_content.py  test_untrusted_content_fencing.py
