[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stringdb-link"
version = "4.0.2"
description = "High-performance unified API server for STRING protein-protein interaction database with MCP integration"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "StringDB-Link Development Team", email = "dev@stringdb-link.org" },
]
maintainers = [
  { name = "StringDB-Link Development Team", email = "dev@stringdb-link.org" },
]
keywords = [
  "string",
  "proteins",
  "interactions",
  "bioinformatics",
  "api",
  "mcp",
  "stringdb",
  "protein-protein",
  "networks",
  "enrichment",
  "research",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.46.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "httpx>=0.28.0,<1.0.0",
  "async-lru>=2.0.4,<3.0.0",
  "mcp[cli]>=1.27.0,<2.0.0",
  "fastmcp>=3.4.4,<4.0.0",
  "structlog>=24.4.0,<26.0.0",
  "orjson>=3.10.0,<4.0.0",
  "typer>=0.25.1,<1.0.0",
  "rich>=15.0.0,<16.0.0",
  "python-multipart>=0.0.31",
  "gunicorn>=25.3.0,<27.0.0",
  "asgi-correlation-id>=4.3.0,<5.0.0",
  "prometheus-client>=0.21.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/stringdb-link/stringdb-link"
Documentation = "https://stringdb-link.readthedocs.io"
Repository = "https://github.com/stringdb-link/stringdb-link"
"Bug Tracker" = "https://github.com/stringdb-link/stringdb-link/issues"
Changelog = "https://github.com/stringdb-link/stringdb-link/blob/main/CHANGELOG.md"

[project.scripts]
stringdb-link = "stringdb_link.cli:main"
stringdb-mcp = "mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "pytest-cov>=6.0.0,<8.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
  "pytest-xdist>=3.6.0,<4.0.0",
  "respx>=0.22.0,<1.0.0",
  "ruff>=0.8.0,<1.0.0",
  "mypy>=1.14.0,<3.0.0",
  "pre-commit>=4.0.0,<5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["stringdb_link"]

[tool.hatch.build.targets.wheel.force-include]
"mcp_server.py" = "mcp_server.py"
"server.py" = "server.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "S",
  "T20",
  "SIM",
  "RUF",
]
ignore = [
  "E501",   # Line too long (handled by formatter)
  "B008",   # FastAPI Query/Depends pattern (call in argument default by design)
  "S101",   # asserts ok in tests (also per-file-ignores)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
# Fleet-canonical test ignores: binding to all interfaces, try/except/pass in
# fixtures, prints, and assert-style helpers are expected in test code. S105 is
# added for redaction tests that assign fake secrets to mock settings.
"tests/**/*" = ["S101", "S104", "S105", "S110", "T20", "B011", "SIM105", "SIM108"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
  ".*site-packages.*",
  ".*/miniforge3/.*",
  ".*/venv/.*",
  ".*/.venv/.*",
  "htmlcov/.*",
]

[[tool.mypy.overrides]]
module = [
  "uvicorn.*",
  "fastmcp.*",
  "mcp.*",
  "async_lru.*",
  "orjson.*",
  "structlog.*",
  "rich.*",
  "typer.*",
  "asgi_correlation_id.*",
  "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--strict-markers", "-ra"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "api: marks tests that require API access",
  "mcp: marks tests that test MCP functionality",
]
filterwarnings = [
  "error",
  "ignore::UserWarning",
  "ignore::DeprecationWarning:httpx.*",
  "ignore::DeprecationWarning:fastmcp.*",
]

[tool.coverage.run]
source = ["stringdb_link"]
omit = ["tests/*", "stringdb_link/__main__.py", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_also = [
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
